--- a/safepo/multi_agent/marl_cfg/macpo/config.yaml
+++ b/safepo/multi_agent/marl_cfg/macpo/config.yaml
@@ -81,3 +81,16 @@ mamujoco:
   target_kl: 0.01
   learning_iters: 15 # Number of SGD Iterations
   entropy_coef: 0.01
+
+smac: 
+  layer_N: 1
+  num_env_steps: 100000
+  episode_length: 1000
+  n_rollout_threads: 5
+  n_eval_rollout_threads: 5
+  hidden_size: 128
+  gamma: 0.99
+  safety_gamma: 0.2
+  target_kl: 0.01
+  learning_iters: 15 # Number of SGD Iterations
+  entropy_coef: 0.01
